@@ -7,6 +7,10 @@ o Added resegment() for PairedPSCBS for easy resegmentation.
 o Adjusted segmentByCBS() such that it can handle 'knownSegments'
   with chromosome boundaries given as -Inf and +Inf.
 o Now argument 'mar' for plotTracks() defaults to NULL.
+o ROBUSTNESS: Now segmentByCBS() does more validation of 'knownSegments'.
+o BUG FIX: segmentByPairedPSCBS() would give an error when trying to
+  segment DH if the TCN segment contains no data points, which could
+  happen if 'knownSegments' specifies an empty segment, centromere.
 o BUG FIX: extractSegments() for CBS would throw an error when
   there were multiple chromosomes.
 
